--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "webpack-dev-server --config client/webpack.config.js",
+    "client": "webpack serve --config ./client/webpack.dev.js",
+    "build": "webpack --config ./client/webpack.prod.js",
+    "start": "webpack-dev-server",
     "server": "ts-node -r tsconfig-paths/register server/src/app.ts",
     "lint": "eslint **/src/*.ts",
     "prettier-check": "./node_modules/prettier/bin-prettier.js --check .",
@@ -26,6 +28,7 @@
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
+    "@webpack-cli/serve": "^1.1.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
@@ -46,7 +49,8 @@
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.7.3"
   }
 }
